revops-lab/main/default/objects/Quote_Configuration__c/Quote_Configuration__c.object-meta.xml
<CustomObject>
    <description>Revenue Operations Lab quote header. Lines roll up through native roll-up summary fields; status changes are made by SalesQuoteApprovalService and OrderConversionService.</description>
    <label>Quote Configuration</label>
    <nameField>
        <displayFormat>QC-{000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>