revops-lab/main/default/objects/Quote_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defaulted from the opportunity by the Sales_Quote_Configuration_Defaults flow.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Configurations</relationshipLabel>
    <relationshipName>Quote_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>