revops-lab/main/default/objects/Quote_Configuration__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set on submission from Approval_Routing__mdt.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>