revops-lab/main/default/objects/Quote_Configuration__c/fields/Approval_Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Approval_Threshold_Percent__c</fullName>
    <description>Discount threshold of the approval tier that matched on submission.</description>
    <label>Approval Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>