revops-lab/main/default/objects/Quote_Configuration__c/fields/Blended_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Blended_Discount_Percent__c</fullName>
    <formula>IF(Total_List_Amount__c &gt; 0, (Total_List_Amount__c - Total_Net_Amount__c) / Total_List_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>