revops-lab/main/default/objects/Quote_Configuration__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <description>Required before the quote can be converted to an order.</description>
    <label>Customer PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>