revops-lab/main/default/objects/Quote_Configuration__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <label>Line Count</label>
    <summaryForeignKey>Quote_Configuration_Line__c.Quote_Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>