revops-lab/main/default/objects/Quote_Configuration__c/fields/Max_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percent__c</fullName>
    <label>Max Line Discount %</label>
    <summarizedField>Quote_Configuration_Line__c.Discount_Percent__c</summarizedField>
    <summaryForeignKey>Quote_Configuration_Line__c.Quote_Configuration__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>