revops-lab/main/default/objects/Quote_Configuration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Configurations</relationshipLabel>
    <relationshipName>Quote_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>