revops-lab/main/default/objects/Quote_Configuration__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Quote Configurations</relationshipLabel>
    <relationshipName>Quote_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>