revops-lab/main/default/objects/Quote_Configuration__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quote Configurations</relationshipLabel>
    <relationshipName>Quote_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>