revops-lab/main/default/objects/Quote_Configuration__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Configurations</relationshipLabel>
    <relationshipName>Quote_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>