revops-lab/main/default/objects/Quote_Configuration__c/fields/Required_Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Tier__c</fullName>
    <label>Required Approval Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>