revops-lab/main/default/objects/Quote_Configuration__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>