revops-lab/main/default/objects/Quote_Configuration__c/fields/Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount__c</fullName>
    <label>Total Net Amount</label>
    <summarizedField>Quote_Configuration_Line__c.Net_Total__c</summarizedField>
    <summaryForeignKey>Quote_Configuration_Line__c.Quote_Configuration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>