revops-lab/main/default/objects/Quote_Configuration__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>Defaulted to today + 30 days by the Sales_Quote_Configuration_Defaults flow.</description>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>