revops-lab/main/default/objects/Quote_Configuration__c/validationRules/Account_Matches_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Matches_Opportunity</fullName>
    <active>true</active>
    <description>The quote account must be the opportunity account.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Account__c)), NOT(ISBLANK(Opportunity__c)), Account__c &lt;&gt; Opportunity__r.AccountId)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>The account must match the opportunity account.</errorMessage>
</ValidationRule>