revops-lab/main/default/objects/Quote_Configuration__c/validationRules/Commercial_Terms_Locked_After_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_Terms_Locked_After_Submit</fullName>
    <active>true</active>
    <description>Commercial terms cannot change once the quote is submitted, unless the user holds Sales_Override_Quote_Lock.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), OR(ISPICKVAL(PRIORVALUE(Status__c), 'Pending Approval'), ISPICKVAL(PRIORVALUE(Status__c), 'Approved'), ISPICKVAL(PRIORVALUE(Status__c), 'Ordered')), OR(ISCHANGED(Opportunity__c), ISCHANGED(Price_Book__c), ISCHANGED(Term_Months__c), ISCHANGED(Valid_Until__c)), NOT($Permission.Sales_Override_Quote_Lock))</errorConditionFormula>
    <errorMessage>Opportunity, price book, term and expiry cannot change after submission. Recall the quote first.</errorMessage>
</ValidationRule>