revops-lab/main/default/objects/Quote_Configuration__c/validationRules/Order_Requires_Customer_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Requires_Customer_PO</fullName>
    <active>true</active>
    <description>An ordered quote must carry the customer purchase order number.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Ordered'), ISBLANK(Customer_PO_Number__c))</errorConditionFormula>
    <errorDisplayField>Customer_PO_Number__c</errorDisplayField>
    <errorMessage>A customer PO number is required to convert the quote to an order.</errorMessage>
</ValidationRule>