revops-lab/main/default/objects/Quote_Configuration__c/validationRules/Term_Months_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Months_In_Range</fullName>
    <active>true</active>
    <description>Term must be between 1 and 60 months.</description>
    <errorConditionFormula>OR(ISBLANK(Term_Months__c), Term_Months__c &lt; 1, Term_Months__c &gt; 60)</errorConditionFormula>
    <errorDisplayField>Term_Months__c</errorDisplayField>
    <errorMessage>Term must be between 1 and 60 months.</errorMessage>
</ValidationRule>