revops-lab/main/default/objects/Quote_Configuration__c/validationRules/Valid_Until_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Until_Not_In_Past</fullName>
    <active>true</active>
    <description>A new or changed expiry date cannot be in the past.</description>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(Valid_Until__c)), NOT(ISBLANK(Valid_Until__c)), Valid_Until__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Valid_Until__c</errorDisplayField>
    <errorMessage>Valid Until cannot be in the past.</errorMessage>
</ValidationRule>